--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
+sudo: false
 language: node_js
 node_js:
   - 'stable'
   - '0.12'
   - '0.10'
+
+before_install:
+  - npm install -g gulp
+  - npm install
+
+script:
+  - gulp
